fixed about image scaling on IE11

--- a/scss/custom/about.scss
+++ b/scss/custom/about.scss
@@ -15,6 +15,7 @@
   img.card-img-top {
     width: 100%;
     height: auto;
+    flex-shrink: 0;
   }
 
   .team-name {
